# TRON

./: CMakeLists.txt
app/: CMakeLists.txt  tron.cu
include/: tron.h
src/: CMakeLists.txt  RUNME1_tron_degrid_phantom.sh  tron.cu
